# manim-playground-poetry

./: .gitignore  2pc.py  README.md  To render this animation, you can use  You can render this animation using the command  ch_2_two_party_computation.ipynb  ch_2_two_party_computation.py  example.py  hello.py  pyproject.toml
src/: 2pc.py
src/util/: intro.py  utils.py
