[tool.poetry]
name = "manim-playground-poetry"
version = "0.1.0"
description = ""
authors = ["flyingnobita <46126470+flyingnobita@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
manim = "^0.19.0"
flake8 = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
